// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Label Component Snapshot should match snapshot with additional props 1`] = `
<div>
  <label
    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
    data-slot="label"
    data-test="label"
    data-testid="label-root"
    for="input"
    id="label-1"
  >
    Input Label
  </label>
</div>
`;

exports[`Label Component Snapshot should match snapshot with complex children 1`] = `
<div>
  <label
    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
    data-slot="label"
    data-testid="label-root"
  >
    <span
      class="icon"
    >
      ⭐
    </span>
    Starred Item
  </label>
</div>
`;

exports[`Label Component Snapshot should match snapshot with custom className 1`] = `
<div>
  <label
    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-blue-500"
    data-slot="label"
    data-testid="label-root"
  >
    Blue Label
  </label>
</div>
`;

exports[`Label Component Snapshot should match snapshot with text content 1`] = `
<div>
  <label
    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
    data-slot="label"
    data-testid="label-root"
  >
    Test Label
  </label>
</div>
`;
